--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,7 +212,7 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - /home/hanna/saver/agentic-dev/mosquitto.conf:/mosquitto/config/mosquitto.conf:rw
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf:rw
     healthcheck:
       test: ["CMD", "mosquitto_sub", "-h", "127.0.0.1", "-p", "1883", "-t", "$$SYS/#", "-C", "1", "-i", "healthcheck"]
       interval: 30s
